<resources>
    <string name="app_name">EcoMarket</string>
    <string name="info">Инфо</string>
    <string name="history">История</string>
    <string name="basket">Корзина</string>
    <string name="home">Главная</string>
    <string name="eco_market">Эко-Маркет</string>
    <string name="fruits">Фрукты</string>
    <string name="products">Продукты</string>
    <string name="fast_search">Быстрый поиск</string>
    <string name="category">Категория</string>
    <string name="add">Добавить</string>
    <string name="description">Фрукты, овощи, зелень, сухофрукты, а так же\nсделанные из натуральных ЭКО продуктов\n(варенье, салаты, соленья, компоты и т.д.)\nможете заказать удобно, качественно\nи по доступной цене.\nГотовы сотрудничать взаимовыгодно\nс магазинами.\nМы заинтересованы в экономии ваших\nденег и времени.\nСтоимость доставки 150 сом и еще\nдобавлен для окраину города.\nПри отказе подтвержденного заказа более\n2-х раз Клиент заносится в черный список!!!</string>
    <string name="call">Позвонить</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="instagram">Instagram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1">1</string>
    <string name="no_internet_connection">Отсутствует интернет\nсоединение</string>
    <string name="ok">Ок</string>
    <string name="checkout">Оформить заказ</string>
    <string name="delete">Очистить</string>
    <string name="product_name">Название продукта</string>
    <string name="price_for_one">Цена за 1 шт</string>
    <string name="sum">Сумма</string>
    <string name="delivery">Доставка</string>
    <string name="total">Итого</string>
</resources>