<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.ecomarket.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/basketFragment"
        android:name="com.example.ecomarket.ui.basket.BasketFragment"
        android:label="@string/basket"
        tools:layout="@layout/fragment_basket" />

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.ecomarket.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/infoFragment"
        android:name="com.example.ecomarket.ui.info.InfoFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_info" />
</navigation>