<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.basket.BasketFragment">

    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_12dp"
        android:fontFamily="@font/tt_norms_pro_medium"
        android:padding="@dimen/_16dp"
        android:text="@string/delete"
        android:textColor="@color/red"
        android:textSize="@dimen/_18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_28dp"
        android:fontFamily="@font/tt_norms_pro_medium"
        android:text="@string/basket"
        android:textColor="@color/black"
        android:textSize="@dimen/_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_delete">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_basket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_basket" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_20dp"
            android:fontFamily="@font/tt_norms_pro_medium"
            android:text="@string/sum"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_8dp"
            android:fontFamily="@font/tt_norms_pro_medium"
            android:text="@string/delivery"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_8dp"
            android:fontFamily="@font/tt_norms_pro_medium"
            android:text="@string/total"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>