<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.info.InfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_info_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/info_bg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:fontFamily="@font/tt_norms_pro_medium"
                android:text="@string/info"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/iv_info_bg">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_16dp"
                    android:fontFamily="@font/tt_norms_pro_bold"
                    android:text="@string/eco_market"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_24sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16dp"
                    android:fontFamily="@font/tt_norms_pro_regular"
                    android:text="@string/description"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/_16sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_call"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_32dp"
                    android:backgroundTint="@color/light_grey"
                    android:fontFamily="@font/tt_norms_pro_bold"
                    android:padding="@dimen/_16dp"
                    android:text="@string/call"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:cornerRadius="@dimen/_16dp"
                    app:icon="@drawable/ic_phone"
                    app:iconGravity="textStart"
                    app:iconTint="@color/black" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_whatsapp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:backgroundTint="@color/light_grey"
                    android:fontFamily="@font/tt_norms_pro_bold"
                    android:padding="@dimen/_16dp"
                    android:text="@string/whatsapp"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:cornerRadius="@dimen/_16dp"
                    app:elevation="@dimen/_0dp"
                    app:icon="@drawable/ic_whatsapp"
                    app:iconGravity="textStart"
                    app:iconTint="@color/black" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_instagram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:backgroundTint="@color/light_grey"
                    android:fontFamily="@font/tt_norms_pro_bold"
                    android:padding="@dimen/_16dp"
                    android:text="@string/instagram"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    app:cornerRadius="@dimen/_16dp"
                    app:icon="@drawable/ic_instagram"
                    app:iconGravity="textStart"
                    app:iconTint="@color/black" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>