<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_16dp"
    android:layout_marginTop="@dimen/_12dp"
    android:backgroundTint="@color/light_grey"
    app:cardCornerRadius="@dimen/_12dp"
    app:cardElevation="@dimen/_0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_photo"
            android:layout_width="100dp"
            android:layout_height="88dp"
            android:layout_margin="@dimen/_4dp"
            app:cardCornerRadius="@dimen/_8dp"
            app:cardElevation="@dimen/_0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_product"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_marginTop="@dimen/_8dp"
            android:fontFamily="@font/tt_norms_pro_medium"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sp"
            app:layout_constraintStart_toEndOf="@id/cv_photo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_price_for_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:fontFamily="@font/tt_norms_pro_medium"
            android:text="@string/price_for_one"
            android:textColor="@color/grey"
            android:textSize="@dimen/_14sp"
            app:layout_constraintStart_toStartOf="@id/tv_product_name"
            app:layout_constraintTop_toBottomOf="@id/tv_product_name" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/tt_norms_pro_bold"
            android:text="112"
            android:textColor="@color/main_green"
            android:textSize="@dimen/_20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_product_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_plus"
            android:layout_width="@dimen/_32dp"
            android:layout_height="@dimen/_32dp"
            android:layout_marginEnd="@dimen/_4dp"
            android:layout_marginBottom="@dimen/_4dp"
            android:backgroundTint="@color/main_green"
            android:insetTop="@dimen/_0dp"
            android:insetBottom="@dimen/_0dp"
            android:padding="@dimen/_4dp"
            android:stateListAnimator="@null"
            app:cornerRadius="@dimen/_48dp"
            app:icon="@drawable/ic_plus"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_minus"
            android:layout_width="@dimen/_32dp"
            android:layout_height="@dimen/_32dp"
            android:layout_marginStart="@dimen/_64dp"
            android:layout_marginEnd="@dimen/_18dp"
            android:layout_marginBottom="@dimen/_4dp"
            android:backgroundTint="@color/main_green"
            android:insetTop="@dimen/_0dp"
            android:insetBottom="@dimen/_0dp"
            android:padding="@dimen/_4dp"
            android:stateListAnimator="@null"
            app:cornerRadius="@dimen/_48dp"
            app:icon="@drawable/ic_minus"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_number" />

        <TextView
            android:id="@+id/tv_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_18dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:fontFamily="@font/tt_norms_pro_medium"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_plus" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>